--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,13 @@
   padding: 20px;
   background-color: #f9f9f9;
   box-shadow: 0px 0px 10px rgba(235, 160, 160, 0.1);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .display {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: #fff;
   padding: 10px;
   font-size: 24px;
@@ -35,6 +38,9 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 button {
